# cargo-remote

./: .gitlab-ci.yml  CODEOWNERS  Cargo.toml  README.md  REMOTE_SETUP.MD
.github/workflows/: ci.yaml
src/: main.rs  patches.rs
